[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kobe4cn", email = "kevin.yang.xgz@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "jupyterlab>=4.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]
